# the_fridge

./: pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: board.py  note.py  user.py
app/configs/: config.py
app/database/: engine.py
app/models/: board_model.py  link.py  note_model.py  user_model.py
