[tool.poetry]
name = "the-fridge"
version = "0.1.0"
description = ""
authors = ["FabioD95 <fabio.delrio95@gmail.com>"]
readme = "README.md"
packages = [{include = "the_fridge"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
